force-app/main/default/objects/GTM_Assessment_Frame__mdt/GTM_Assessment_Frame__mdt.object-meta.xml
<CustomObject>
    <label>GTM Assessment Frame</label>
    <pluralLabel>GTM Assessment Frames</pluralLabel>
</CustomObject>