force-app/main/default/objects/GTM_Assessment_Frame__mdt/fields/Complexity_Bands_JSON__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Bands_JSON__c</fullName>
    <label>Complexity Bands JSON</label>
    <description>This offering&apos;s estate-complexity bands, same shape as
        Bands_JSON__c. Blank or unusable falls back to GtmEstateComplexity&apos;s
        compiled Light/Moderate/Heavy edges.</description>
    <type>LongTextArea</type>
    <length>4096</length>
</CustomField>