force-app/main/default/objects/GTM_Assessment_Frame__mdt/fields/Complexity_Max_Answer_Value__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Max_Answer_Value__c</fullName>
    <label>Complexity Max Answer Value</label>
    <description>Highest value one scored estate-complexity answer may
        contribute. Blank means this offering has no complexity axis at all.</description>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>