force-app/main/default/objects/GTM_Assessment_Frame__mdt/fields/Complexity_Min_Answer_Value__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Min_Answer_Value__c</fullName>
    <label>Complexity Min Answer Value</label>
    <description>Lowest value one scored estate-complexity answer may
        contribute. Blank means this offering has no complexity axis at all,
        in which case GtmEstateComplexity falls back to its compiled
        migration-accelerator constants.</description>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>