force-app/main/default/objects/GTM_Assessment_Frame__mdt/fields/Min_Answer_Value__c.field-meta.xml
<CustomField>
    <fullName>Min_Answer_Value__c</fullName>
    <label>Min Answer Value</label>
    <description>Lowest value one scored readiness answer may contribute for
        this offering. Replaces GtmAssessmentScoring.MIN_ANSWER_VALUE, which
        stays as the fallback when no frame record exists.</description>
    <required>true</required>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>