force-app/main/default/objects/GTM_Assessment_Frame__mdt/fields/Offering_Key__c.field-meta.xml
<CustomField>
    <fullName>Offering_Key__c</fullName>
    <label>Offering Key</label>
    <description>Which GTM offering this scoring frame belongs to. Matches
        GTM_Offering__mdt.Offering_Key__c. One record per offering at most;
        an offering with no record here scores against the compiled
        migration-accelerator fallback in GtmAssessmentScoring /
        GtmEstateComplexity. See ADR-0007 section 6.
    </description>
    <required>true</required>
    <length>80</length>
    <type>Text</type>
</CustomField>